# Apex-X

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  inspect_checkpoint.py  mkdocs.yml  pyproject.toml  requirements.txt  todo.md  train_a100_sxm.ipynb  verify_logging.py  verify_metrics_lifecycle.py  verify_tracing.py
.github/workflows/: ci.yml  perf_gpu.yml  perf_trend_weekly.yml
apex_x/: __init__.py  cli.py
apex_x/bench/: __init__.py  gpu_bench.py  perf.py  triton_fused_stage1_bench.py  triton_fusiongate_bench.py  triton_tilepack_bench.py  triton_tilessm_bench.py  triton_tileunpack_bench.py  trt_engine_sweep.py
apex_x/config/: __init__.py  io.py  schema.py
apex_x/data/: __init__.py  additional_augmentations.py  augmentations.py  coco.py  coco_dataset.py  collate.py  dataset_wrappers.py  lsj_augmentation.py  miner.py  multi_dataset.py  patch_dataset.py  preflight.py  quality_filter.py  satellite.py  satellite_augmentations.py  transforms.py  yolo.py
apex_x/eval/: __init__.py  coco_evaluator.py  coco_metrics.py
apex_x/export/: __init__.py  interfaces.py  noop.py  onnx_export.py  pipeline.py
apex_x/infer/: __init__.py  detection.py  ensemble.py  eval_metrics.py  panoptic.py  pq_eval.py  runner.py  tracking.py  tta.py
apex_x/inference/: __init__.py  tta.py
apex_x/kernels/: __init__.py
apex_x/losses/: __init__.py  auxiliary_losses.py  bff_loss.py  det_loss.py  distill.py  flow_symmetry_loss.py  focal_freq_loss.py  iou_loss.py  lovasz_loss.py  ranksort_loss.py  seg_loss.py  simota.py  topological_loss.py
apex_x/model/: __init__.py  bifpn.py  cascade_head.py  cascade_mask_head.py  cheap_block.py  core.py  deformable_conv.py  det_head.py  diffusion_refiner.py  ff_heavy_path.py  ff_module.py  film.py  fpn.py  fusion_gate.py  hybrid_backbone_v5.py  image_enhancer.py  inr_head.py  inst_seg_head.py  mask_quality_head.py  oracle_refiner.py  point_rend.py  post_process.py  pv_backbone.py  pv_coarse_heads.py  pv_dinov2.py  pv_module.py  se_attention.py  teacher.py  teacher_v3.py  teacher_v5.py  tile_refine_block.py  (+3 more)
artifacts/: eval_report.json  eval_report.md  perf_compare_test.json  perf_current_seed.json  perf_current_test.json  perf_gpu_compare_local_dev.json  perf_gpu_current_local_dev.json  perf_gpu_dev.json  perf_gpu_dev.md
configs/: best_in_world.yaml  coco_baseline.yaml  satellite_1024.yaml  worldclass.yaml
docs/: CI_GPU.md  CONTEXT.md  DECISIONS.md  ENGINEERING_SPEC.md  FP8.md  PERF.md  PERF_GPU.md  PRD.md  QAT.md  SOTA_EVIDENCE.md  TODO.md  TRAINING_GUIDE.md  algorithms.md  benchmarks.md  index.md
examples/: __init__.py  _build_notebook.py  ascension_v5_pro_trainer.ipynb  run_cpu_baseline.py  smoke_cpu.py  smoke_cpu.yaml  train_a100_sxm.ipynb  train_stages_smoke.py  train_v5_ascension.ipynb  worldclass_usage.py
notebooks/: ascension_v5_pro_inference.ipynb  checkpoint_image_inference.ipynb  inference_v5_ascension.ipynb  visualize_predictions.ipynb
runtime/: README.md
runtime/tensorrt/: CMakeLists.txt
runtime/tensorrt/build_cuda/: CMakeCache.txt  Makefile  cmake_install.cmake
runtime/tensorrt/build_cuda2/: CMakeCache.txt  Makefile  apexx_trt_nms_decode_test  apexx_trt_plugin_harness  apexx_trt_tilepack_test  apexx_trt_tilessm_test  apexx_trt_tileunpackfusion_test  cmake_install.cmake
runtime/tensorrt/build_cuda_10_15/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  apexx_trt_nms_decode_test  apexx_trt_plugin_info  apexx_trt_tilepack_test  apexx_trt_tilessm_test  apexx_trt_tileunpackfusion_test  cmake_install.cmake
runtime/tensorrt/build_cuda_10_15/Testing/Temporary/: CTestCostData.txt
runtime/tensorrt/include/apexx_trt/: common.hpp  decode_nms_plugin.hpp  plugin_stub.hpp  tile_pack_plugin.hpp  tile_ssm_scan_plugin.hpp  tile_unpack_fusion_plugin.hpp
runtime/tensorrt/plugins/: nms_decode.cpp  nms_decode.cu  nms_decode.h  tilepack.cpp  tilepack.cu  tilepack.h  tilessm_scan.cpp  tilessm_scan.cu  tilessm_scan.h  tileunpackfusion.cpp  tileunpackfusion.cu  tileunpackfusion.h
runtime/tensorrt/src/: common.cpp  decode_nms_plugin.cpp  plugin_info_main.cpp  tile_pack_plugin.cpp  tile_ssm_scan_plugin.cpp  tile_unpack_fusion_plugin.cpp
runtime/tensorrt/tests/: nms_decode_plugin_test.cpp  plugin_harness_main.cpp  tilepack_plugin_test.cpp  tilessm_scan_plugin_test.cpp  tileunpackfusion_plugin_test.cpp
scripts/: __init__.py  apex_finetune_pipeline.sh  benchmark_triton_fused.py  deployment_readiness.py  evolve.py  mine_hard_examples.py  notebook_checkpoint_smoke.py  perf_baseline_cpu.json  perf_baseline_gpu.json  perf_baseline_trt.json  perf_regression 2.py  perf_regression.py  perf_regression_gpu.py  perf_regression_trt.py  release_attestation.py  sota_benchmark.py  test_nan_stability.py  train.py  train_baseline_coco.py  train_quick_start.sh  train_satellite.py  train_satellite_v3.py  train_teacher.py  train_worldclass_coco.py  verify_augmentations.py  verify_pointrend.py  verify_trainer_v3.py
site/: 404.html  index.html  sitemap.xml
tests/: test_ablation.py  test_bidirectional_ssm_scan.py  test_budget_dual_controller.py  test_caps_runtime.py  test_caps_tensorrt_fp8.py  test_cheap_block.py  test_checkpoint_metadata_wrapper.py  test_checkpoint_notebook_contract.py  test_cli.py  test_cli_dataset_preflight.py  test_cli_export_checkpoint_loading.py  test_coco_compat.py  test_config.py  test_cost_model.py  test_data_preflight.py  test_data_transforms.py  test_det_decode_nms.py  test_det_head.py  test_det_loss_simota.py  test_distill_loss.py  test_dual_budget_convergence.py  test_eval_metrics.py  test_export.py  test_feature_toggle_smoke.py  test_ff_heavy_path.py  test_ff_heavy_path_fused_stage1.py  test_ff_heavy_path_tilessm_dispatch.py  test_ff_module.py  test_film_modulation.py  test_finetune_pipeline.py  test_fpn.py  test_fusion_gate.py  test_gpu_bench_fp8.py  test_gpu_ci_workflow_contract.py  test_hysteresis_temporal.py  test_import_smoke.py  test_infer_runner.py  test_inference_budget.py  test_inference_budget_stress.py  test_inst_seg_head.py  (+92 more)
(+161 files in other folders)
